Change portfolio title and personal details
Updated personal information in the portfolio.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Portafolio de [Tu Nombre]</title>
+    <title>Diego Adones</title>
     <style>
         body { font-family: sans-serif; text-align: center; padding: 50px; }
         h1 { color: #2c3e50; }
@@ -10,9 +10,9 @@
     </style>
 </head>
 <body>
-    <h1>Hola, soy [Tu Nombre]</h1>
-    <p>Desarrollador de Software / Diseñador</p>
+    <h1></h1>
+    <p>Currently, I am studying for a bachelor’s degree in Economics at the University of Chile</p>
     <br>
-    <a href="https://github.com/tu-usuario" class="btn">Ver mi GitHub</a>
+    <a href="https://github.com/dadones" class="btn">Ver mi GitHub</a>
 </body>
 </html>
